fix: remove height constraint from scene-text-div class, add max-height constraint and overflow attribute

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,13 +84,14 @@ main {
 
 .scene-text-div {
     width: 100%;
-    height: 10vh;
+    max-height: 20vh;
     padding: 20px 0;
     color: white;
     font-size: 20px;
     background-color: black;
     text-align: center;
     vertical-align: middle;
+    overflow: auto;
 }
 
 #scene-text {
